
- Indented C/C++ code to follow emacs's gnu C style
This is a first step towards coding standards in the
documentation. Additionally all in the src/c/ directory are listed in the
appropraite documentation section (new-doc).

- Refactored =list_current_directory in unixfsys.d=
Function was obfuscated with ifdefs with non-even pairs of =#\{= and =#\}=.

** Issues fixed
- stable-sort bugfix and improvement in speed
Adapted from SBCL by Diogo Franco.

- typep: accept * type specifier as abbreviation of t as described in
'2.4.3 Type Specifiers' of the specification.

- MOP: fix problemes when redefining non-standard and anonymous classes
Bugs identified and fixed by Pascal Costanza.

- getcwd: fix issue with too long pathname
This fixes the regression, which crashed ECL at start when pathname
exceeded 128 characters limit.

- make-random-state: fix problem with simple-vectors
Until now #$ reader macro accepted simple vectors as an argument, what lead
to bugs if vector didn't match specific requirements like the element type
or the arity. Now we sanitize this.

- thread fix on msvc: on windows importing thread was closing the thread
handler so the thread wakeup wasn't working because the handler is not more valid.

- import thread wasn't set upping a proper environment: on some case
the thread was mistakenly thinking that the thread was already registered.

- ECL_HANDLER_CASE and ECL_RESTART_CASE didn't work as expected
Bug identified and fixed by Vadim Penzin.

* 16.1.2 changes since 16.0.0

** API changes

   - =si:do-defsetf= accepts optional parameter stores.\\
     New lambda-list:\\
     =(access-fn function &optional (stores-no 1))=.\\
     This change is backward compatible.

   - New MP functions:\\
     =mp:with-rwlock=\\
     =mp:try-get-semaphore= (non-blocking)\\
     =mp:mailbox-try-read=  (non-blocking)\\
     =mp:mailbox-try-send=  (non-blocking)

   - Added back removed C interfaces\\
     =ecl_import_current_thread=\\
     =ecl_release_current_thread=
